force-app/main/default/objects/B25__Dimension_Junction__c/B25__Dimension_Junction__c.object-meta.xml
<CustomObject>
    <label>Dimension Junction</label>
    <nameField>
        <label>Dimension Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dimension Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>