force-app/main/default/objects/B25__Dimension_Junction__c/fields/B25__Availability_Checking__c.field-meta.xml
<CustomField>
    <fullName>B25__Availability_Checking__c</fullName>
    <defaultValue>&quot;NONE&quot;</defaultValue>
    <description>Defines what happens if an availability problem is detected. None: allow it. Hard: don&apos;t allow it.
		Soft: allow it, but also create a conflict record for the reservation.</description>
    <inlineHelpText>Définit ce qui se passe si un problème de disponibilité est détecté. Rien : l’autoriser. Strict : ne pas l’autoriser. Souple : l’autoriser, mais créer également un enregistrement de conflit pour la réservation.</inlineHelpText>
    <label>Availability Checking</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>B25__Conflict_Checking</valueSetName>
    </valueSet>
</CustomField>