force-app/main/default/objects/B25__Dimension_Junction__c/fields/B25__Dimension__c.field-meta.xml
<CustomField>
    <fullName>B25__Dimension__c</fullName>
    <label>Dimension</label>
    <referenceTo>B25__Dimension__c</referenceTo>
    <relationshipLabel>Dimension Junctions</relationshipLabel>
    <relationshipName>Dimension_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>