force-app/main/default/objects/B25__Dimension_Junction__c/fields/B25__Dimension_Lookup_API_Name__c.field-meta.xml
<CustomField>
    <fullName>B25__Dimension_Lookup_API_Name__c</fullName>
    <description>The API name of a lookup (or master-detail) to the related dimension record on the junction object.</description>
    <inlineHelpText>Le nom API d’une recherche (ou maître-détail) de l’enregistrement de dimension connexe pour l’objet de jonction.</inlineHelpText>
    <label>Dimension Lookup API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>