force-app/main/default/objects/B25__Dimension_Junction__c/fields/B25__Junction_Allow_Double_Booking_Field__c.field-meta.xml
<CustomField>
    <fullName>B25__Junction_Allow_Double_Booking_Field__c</fullName>
    <description>The API name of a (cross-object) checkbox field on the junction object . When enabled, the junction
		record does not
		count towards double booking checks.</description>
    <inlineHelpText>Le nom API d’un champ de case à cocher (interobjets) pour l’objet connexe. Si cette case est cochée, l’enregistrement de la jonction ne compte pas pour les vérifications de double réservation.</inlineHelpText>
    <label>Junction Allow Double Booking Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>