force-app/main/default/objects/B25__Dimension_Junction__c/fields/B25__Reservation_Allow_Double_Booking_Field__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Allow_Double_Booking_Field__c</fullName>
    <description>The API name of a (cross-object) checkbox field on reservation. When true, the reservation will allow
		double
		bookings.</description>
    <inlineHelpText>Le nom API d’un champ de case à cocher (interobjets) pour la réservation. Si cette option est true, la réservation autorise les réservations doubles.</inlineHelpText>
    <label>Reservation Allow Double Booking Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>