force-app/main/default/objects/B25__Dimension_Junction__c/fields/B25__Reservation_Lookup_API_Name__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Lookup_API_Name__c</fullName>
    <description>The API name of a reservation lookup (or master-detail) on the junction object.</description>
    <inlineHelpText>Le nom API d’une recherche de réservation (ou maître-détail) pour l’objet de jonction.</inlineHelpText>
    <label>Reservation Lookup API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>